添加 PSGC日志详解